Add functionality to update fields/button
Add function in events.js to handle the data and id of updated form
Add api call and passed it data and id of event we are trying to udpate

Co-authored-by: Trey Hilson, Brandon DePalmaFarr, Ross Northrup

--- a/assets/scripts/templates/hang-listing.handlebars
+++ b/assets/scripts/templates/hang-listing.handlebars
@@ -45,7 +45,7 @@
     </h3> -->
 
     <hr>
-    <form id="updateButton" class="" data-id="{{hang.id}}">
+    <form id="updateButton" class="" data-id="{{hang._id}}">
       <h3>Update Hang</h3>
       <fieldset>
         <input type="text" name="hang[title]" value="{{hang.title}}" placeholder="Title">
