Added RSVP functionality created function for button btn-rsvp to call that pushed the id of the hang to the array of rsvp [].
Co-authored-by: Trey Hilson, Brandon DePalmaFarr, Daniel Powers, Ross Northrup

--- a/assets/scripts/templates/hang-listing.handlebars
+++ b/assets/scripts/templates/hang-listing.handlebars
@@ -58,7 +58,7 @@
     </form>
 
     <button data-id="{{hang._id}}" class="btn btn-danger">Delete Hang!</button>
-    <button data-id="{{hang._id}}" class="btn">RSVP</button>
+    <button data-id="{{hang._id}}" class="btn btn-rsvp">RSVP</button>
 
   </section>
 
