Initial styling Added css styling to site, initial testing of color pallet. created ui messaging created ui clear form jqeury functions on all forms including hang creation.
Co-authored-by: Trey Hilson, Brandon DePalmaFarr, Daniel Powers, Ross Northrup

--- a/assets/scripts/templates/hang-listing.handlebars
+++ b/assets/scripts/templates/hang-listing.handlebars
@@ -1,5 +1,5 @@
 {{#each hangs as |hang|}}
-  <section data-id="{{hang._id}}">
+  <section class="hang_section" data-id="{{hang._id}}">
     <h6>Title:</h6>
     <h3>
       {{hang.title}}
