--- a/assets/scripts/templates/my-hang-listing.handlebars
+++ b/assets/scripts/templates/my-hang-listing.handlebars
@@ -1,6 +1,6 @@
 {{#each hangs as |hang|}}
 {{#if hang.currentUserOwns}}
-  <section data-id="{{hang._id}}">
+  <section class="hang_section" data-id="{{hang._id}}">
     <h6>Title:</h6>
     <h3>
       {{hang.title}}
