Cleaned the JS code up
Show/Hide have been appropriately assigned

User Messages for all funcitons

--- a/assets/scripts/templates/hang-listing.handlebars
+++ b/assets/scripts/templates/hang-listing.handlebars
@@ -44,7 +44,7 @@
       {{/if}}
     </h3> -->
 
-    <hr>
+    <!-- <hr>
     <form id="updateButton" class="" data-id="{{hang._id}}">
       <h3>Update Hang</h3>
       <fieldset>
@@ -57,8 +57,8 @@
       </fieldset>
     </form>
 
-    <button data-id="{{hang._id}}" class="btn btn-danger">Delete Hang!</button>
-    <button data-id="{{hang._id}}" class="btn btn-rsvp">RSVP</button>
+    <button id="delete-hang" data-id="{{hang._id}}" class="btn btn-danger">Delete Hang!</button>
+    <button id="rsvp" data-id="{{hang._id}}" class="btn btn-rsvp">RSVP</button> -->
 
   </section>
 
