RSVP creation Created function to PATCH data to mongoose for storing data into RSVP array. Added forEach events in ui and handlebar template to be called for rsvpHangSuccess
Co-authored-by: Trey Hilson, Brandon DePalmaFarr, Daniel Powers, Ross Northrup

--- a/assets/scripts/templates/hang-listing.handlebars
+++ b/assets/scripts/templates/hang-listing.handlebars
@@ -34,17 +34,7 @@
     </h3>
 
     <hr>
-
-    <!-- <h6>Rating:</h6>
-    <h3>
-      {{#if movie.rating}}
-        {{movie.rating}}
-      {{else}}
-        Not Rated
-      {{/if}}
-    </h3> -->
-
-    <!-- <hr>
+    <hr>
     <form id="updateButton" class="" data-id="{{hang._id}}">
       <h3>Update Hang</h3>
       <fieldset>
@@ -58,7 +48,7 @@
     </form>
 
     <button id="delete-hang" data-id="{{hang._id}}" class="btn btn-danger">Delete Hang!</button>
-    <button id="rsvp" data-id="{{hang._id}}" class="btn btn-rsvp">RSVP</button> -->
+    <button id="rsvp" data-id="{{hang._id}}" class="btn btn-rsvp">RSVP</button>
 
   </section>
 
